--- a/Sendinblue.Api/Sendinblue.Api.csproj
+++ b/Sendinblue.Api/Sendinblue.Api.csproj
@@ -8,7 +8,10 @@
     <PackageReference Include="RestSharp" Version="106.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
   </ItemGroup>
+
   <ItemGroup>
-    <Folder Include="Business\" />
+    <Reference Include="Microsoft.CSharp">
+      <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.netcore.app\2.0.0\ref\netcoreapp2.0\Microsoft.CSharp.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
